# editor

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  README.md  build.sh  cmake_install.cmake
html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  class_circle-members.html  class_circle.html  class_controller-members.html  class_controller.html  class_ellipse-members.html  class_ellipse.html  class_ellipse__coll__graph.map  class_ellipse__coll__graph.md5  class_i_observer-members.html  class_i_observer.html  class_i_observer__inherit__graph.map  class_i_observer__inherit__graph.md5  class_model-members.html  class_model.html  class_model__coll__graph.map  class_model__inherit__graph.md5  class_observable-members.html  class_observable.html  class_observable__inherit__graph.map  class_observable__inherit__graph.md5  class_shape-members.html  class_shape.html  class_shape__inherit__graph.map  class_shape__inherit__graph.md5  class_shape_factory-members.html  class_shape_factory.html  class_square-members.html  class_square.html  class_view-members.html  class_view.html  class_view__coll__graph.map  class_view__coll__graph.md5  classes.html  controller_8h.html  controller_8h__dep__incl.map  controller_8h__dep__incl.md5  (+83 more)
latex/: annotated.tex  class_circle.tex  class_controller.tex  class_ellipse.tex  class_ellipse__inherit__graph.md5  class_i_observer.tex  class_i_observer__inherit__graph.md5  class_model.tex  class_model__coll__graph.md5  class_observable.tex  class_shape.tex  (+40 more)
(+60 files in other folders)
